# Ljavalang

./: .gitignore  CHANGELOG.md  README.md  README.zh.md  pyproject.toml
.github/workflows/: tests.yml
docs/: architecture.md  changelog.md  issue-fix-progress.md  java-version-roadmap.md  upstream-issues.md  upstream-prs.md
javalang/: ast.py  parser.py  tokenizer.py  tree.py  visitor.py
javalang/test/: test_java_10_11_syntax.py  test_java_14_15_syntax.py  test_java_16_17_syntax.py  test_java_21_syntax.py  test_java_9_syntax.py  test_upstream_features.py  test_upstream_issues.py
